# code2mermaid

./: LICENSE  README.md  pyproject.toml
code2mermaid/: __init__.py  converter.py  core.py  style.py
