[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "code2mermaid"
version = "0.2.0"
description = "Python code converter for Mermaid chartflows"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
license = { file = "LICENSE.txt" }
keywords = ["mermaid"]
authors = [{ name = "Vilson Rodrigues", email = "vilsonrodrigues07@hotmail.com" }]
maintainers = [{ name = "Vilson Rodrigues", email = "vilsonrodrigues07@hotmail.com" }]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",  
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",  
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
"Homepage" = "https://github.com/vilsonrodrigues/code2mermaid"
"Bug Reports" = "https://github.com/vilsonrodrigues/code2mermaid/issues"